--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>DMX 0.1-SNAPSHOT</title>
+    <title>DMX Mobile 5.0-beta-6-SNAPSHOT</title>
   </head>
   <body>
     <div id="app"></div>
