--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>DMX Mobile 5.0-beta-6-SNAPSHOT</title>
   </head>
   <body>
