--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>DMX Mobile 5.0-beta-1</title>
+    <title>DMX Mobile 5.0-beta-2-SNAPSHOT</title>
   </head>
   <body>
     <div id="app"></div>
